# optfsst

./: .gitignore  BtrFSST.md  CMakeLists.txt  README.md  btrfsst-thesis-presentation.pptx  fsst.cpp  fsst.h  fsst12.h  fsst_avx512.cpp  libfsst.cpp  libfsst.hpp  libfsst12.cpp  libfsst12.hpp  libfsst12_trie.cpp  libfsst12_trie.hpp  libfsst_trie.cpp  libfsst_trie.hpp  run.sh  run12.sh
benchmarking/: avx512_dp_improvement_proposals.md  cf_bench12  cf_bench12.cpp  comp  comp.cpp  decomp  decomp.cpp  line_bench  line_bench.cpp  lz4_bench  lz4_bench.cpp  plot_results.py  prune_benefit.py  runner  runner.cpp  runner12  runner12.cpp  runner_trie_metrics  runner_trie_metrics.cpp  runner_trie_metrics_test  script.txt  snappy_bench  snappy_bench.cpp  stats.txt  temp.txt  zstd_bench  zstd_bench.cpp
benchmarking/csv/: best_config.csv  best_config12.csv  cf_block_compressors.csv  cf_speed_fsst_plus_vs_optfsst_plus.csv  comp.csv  compression_speed.csv  compression_speed_block_compressors.csv  compression_speed_dbtext.csv  compression_speed_dbtext12.csv  compression_speed_paper.csv  decomp.csv  decompression_speed.csv  decompression_speed_block_compressors.csv  decompression_speed_dbtext.csv  decompression_speed_dbtext12.csv  decompression_speed_paper.csv  dict.csv  dict2.csv  dp_buildDP_speedup.csv  dp_buildDP_variants.csv  dp_encode_prune_effect_sorted.csv  improvement.csv  improvement12.csv  prune_benefit.csv  results.csv  results2.csv  table_construction_speed_paper.csv  trie_training_metrics_dbtext.csv
benchmarking/dp_bench/: CMakeLists.txt  README.md  dp_bench.cpp  run_bench.py  setup_and_run.sh
benchmarking/fsst_plus_bench/: README.md  bench_runner.cpp  fsst_opt_CMakeLists.txt  fsst_opt_wrap.cpp  fsst_plus_CMakeLists.txt  run_bench.py  setup_and_run.sh
build-trie/: CMakeCache.txt  Makefile  cmake_install.cmake  fsst  fsst12
build12-trie/: CMakeCache.txt  Makefile  cmake_install.cmake  fsst12
data/: extract.py  refine_datasets.py
